fix : 回傳無資料停留在上一個結果線圖bug

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
@@ -3323,7 +3323,7 @@
                         method: 'post',
                         data: params,
                         success: function (data) {
-                            let mapDate = [];
+                            let mapData = [];
                             if (Object.keys(data.resultSet.result).length != 0) {
                                 mapData = data.resultSet.result.map(item => {
                                     return {
